# ep202501django_crm

./: pyproject.toml
ep_crm/: db.sqlite3  manage.py
ep_crm/ep_crm/: asgi.py  settings.py  urls.py  wsgi.py
ep_crm/ep_crm1/: admin.py  apps.py  models.py  views.py
ep_crm/ep_crm1/migrations/: 0001_initial.py  0002_alter_client_address.py  0003_alter_client_options_alter_client_address_and_more.py  0004_alter_deal_options_alter_task_options_and_more.py
ep_crm/templates/: client_detail.html  clients_list.html
