[project]
name = "ep202501django-crm"
version = "0.1.0"
description = "Первый проект CRM на django, для обучения"
authors = [
    {name = "Eugenii B. Petrov",email = "epoy74@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
